--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>https://169163.xyz/about/</title><link rel="canonical" href="https://169163.xyz/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://169163.xyz/about/" /></head></html>
+<!DOCTYPE html><html><head><title>https://blog.169163.xyz/about/</title><link rel="canonical" href="https://blog.169163.xyz/about/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://blog.169163.xyz/about/" /></head></html>
