--- a/search/index.html
+++ b/search/index.html
@@ -3,17 +3,17 @@
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>Search</title>
 
-<link rel='canonical' href='https://169163.xyz/search/'>
+<link rel='canonical' href='https://blog.169163.xyz/search/'>
 
 <link rel="stylesheet" href="/scss/style.min.css"><meta property='og:title' content='Search'>
 <meta property='og:description' content=''>
-<meta property='og:url' content='https://169163.xyz/search/'>
+<meta property='og:url' content='https://blog.169163.xyz/search/'>
 <meta property='og:site_name' content='169163&#39;s blog'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
-<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://169163.xyz/search/index.json">
-    <link rel="shortcut icon" href="img/favicon.ico" />
-<link rel="preload" href="https://169163.xyz/search/index.json" as="fetch" crossorigin="anonymous">
+<meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://blog.169163.xyz/search/index.json">
+    <link rel="shortcut icon" href="img/favicon.png" />
+<link rel="preload" href="https://blog.169163.xyz/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
     <script>
@@ -63,8 +63,8 @@
                 
             </figure>
         
-        <h1 class="site-name"><a href="https://169163.xyz">169163&#39;s blog</a></h1>
-        <h2 class="site-description">169163</h2>
+        <h1 class="site-name"><a href="https://blog.169163.xyz">169163&#39;s blog</a></h1>
+        <h2 class="site-description">又名山下さくら</h2>
     </header>
 
     <ol class="menu" id="main-menu">
@@ -170,7 +170,7 @@
 </aside>
 
             <main class="main full-width">
-<form action="https://169163.xyz/search/" class="search-form"data-json="https://169163.xyz/search/index.json">
+<form action="https://blog.169163.xyz/search/" class="search-form"data-json="https://blog.169163.xyz/search/index.json">
     <p>
         <label>サーチ</label>
         <input name="keyword" placeholder="入力..." />
