deploy: 8d904e3f6a4c21e1530ced421494fb8a346baf98

--- a/search/index.html
+++ b/search/index.html
@@ -13,6 +13,17 @@
 <meta name="twitter:title" content="Search">
 <meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://blog.169163.xyz/search/index.json">
     <link rel="shortcut icon" href="img/favicon.png" />
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-DG786LMHCF', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <link rel="preload" href="https://blog.169163.xyz/search/index.json" as="fetch" crossorigin="anonymous">
     </head>
     <body class="template-search">
