--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,17 @@
 <meta name="twitter:description" content="个人介绍">
     <link rel="shortcut icon" href="img/favicon.png" />
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-DG786LMHCF', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="article-page keep-sidebar">
     <script>
