--- a/p/没有色图的世界/index.html
+++ b/p/没有色图的世界/index.html
@@ -15,6 +15,17 @@
     <meta name="twitter:image" content='https://blog.169163.xyz/p/%E6%B2%A1%E6%9C%89%E8%89%B2%E5%9B%BE%E7%9A%84%E4%B8%96%E7%95%8C/cover.jpg' />
     <link rel="shortcut icon" href="img/favicon.png" />
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-DG786LMHCF', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="">
     <script>
