--- a/p/自建云盘/index.html
+++ b/p/自建云盘/index.html
@@ -15,6 +15,17 @@
     <meta name="twitter:image" content='https://blog.169163.xyz/p/%E8%87%AA%E5%BB%BA%E4%BA%91%E7%9B%98/cover.jpg' />
     <link rel="shortcut icon" href="img/favicon.png" />
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'G-DG786LMHCF', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+
     </head>
     <body class="">
     <script>
