--- a/index.html
+++ b/index.html
@@ -183,8 +183,12 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/p/gonelist-only-ipv6-argo/">
-                
-                    <img src="cover.jpg" loading="lazy" alt="Featured image of post 在Euserv上部署GoneList并使用Argo tunnel" />
+                <img src="/p/gonelist-only-ipv6-argo/cover_hu4563e6d60034594ad618caa9614a7c26_312684_800x0_resize_q75_box.jpg"
+                        srcset="/p/gonelist-only-ipv6-argo/cover_hu4563e6d60034594ad618caa9614a7c26_312684_800x0_resize_q75_box.jpg 800w, /p/gonelist-only-ipv6-argo/cover_hu4563e6d60034594ad618caa9614a7c26_312684_1600x0_resize_q75_box.jpg 1600w"
+                        width="800" 
+                        height="450" 
+                        loading="lazy"
+                        alt="Featured image of post 在Euserv上部署GoneList并使用Argo tunnel" />
                 
             </a>
         </div>
