deploy: 82f9365af65a009e71dbac6b124223b6d0f7d82e

--- a/p/create-onemanager/index.html
+++ b/p/create-onemanager/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="如何搭建一个Onemanager">
 <meta name="twitter:description" content="使用OpenResty"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://blog.169163.xyz/p/create-onemanager/cover.jpg' />
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="img/favicon.webp" />
 
     </head>
     <body class="">
