--- a/p/hello-world/index.html
+++ b/p/hello-world/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Hello World">
 <meta name="twitter:description" content="可能是第一篇文章？"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://blog.169163.xyz/p/hello-world/cover.jpg' />
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="img/favicon.webp" />
 
     </head>
     <body class="">
