--- a/p/no-porn/index.html
+++ b/p/no-porn/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="没有色图的世界">
 <meta name="twitter:description" content="一片灰暗啊"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://blog.169163.xyz/p/no-porn/cover.jpg' />
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="img/favicon.webp" />
 
     </head>
     <body class="">
