--- a/p/gonelist-only-ipv6-argo/index.html
+++ b/p/gonelist-only-ipv6-argo/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="在Euserv上部署GoneList并使用Argo tunnel">
 <meta name="twitter:description" content="如何折腾Euserv"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://blog.169163.xyz/p/gonelist-only-ipv6-argo/cover.jpg' />
-    <link rel="shortcut icon" href="img/favicon.png" />
+    <link rel="shortcut icon" href="img/favicon.webp" />
 
     </head>
     <body class="">
