deploy: 755677c2fa18e1b0e34127dcc03df08e745b3811

--- a/p/create-onemanager/index.html
+++ b/p/create-onemanager/index.html
@@ -269,7 +269,9 @@ gzip on; 取消注释
             include        fastcgi_params;
         }
 }
-</code></pre>
+</code></pre><h1 id="示例站点httpspan169163xyz"><a class="link" href="https://pan.169163.xyz/"  target="_blank" rel="noopener"
+    >示例站点</a></h1>
+
 </section>
 
 
