--- a/p/gonelist-only-ipv6-argo/index.html
+++ b/p/gonelist-only-ipv6-argo/index.html
@@ -281,6 +281,8 @@ systemctl status gonelist</p>
 <h3 id="argo-tunnel启动">Argo Tunnel启动！</h3>
 <pre><code class="language-console" data-lang="console">cloudflared tunnel --hostname yourdomain.com --url localhost:8000 --name 自己写个名
 </code></pre><h1 id="可以用screen防止关闭ssh就白给的情况"><strong>可以用screen防止关闭ssh就白给的情况</strong></h1>
+<h1 id="示例站点httpscloud169163xyz"><a class="link" href="https://cloud.169163.xyz"  target="_blank" rel="noopener"
+    >示例站点</a></h1>
 
 </section>
 
